--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next-themes": "^0.4.6",
     "openai": "^5.12.2",
     "openapi-fetch": "^0.14.0",
+    "pg-meta": "^1.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
