--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@langchain/core": "^0.3.72",
+    "@langchain/openai": "^0.6.9",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -32,6 +34,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "common-tags": "^1.8.2",
+    "langchain": "^0.3.31",
     "lucide-react": "^0.540.0",
     "next": "15.4.7",
     "next-themes": "^0.4.6",
